[metadata]
name = asam_open_odd_ros
version = 0.1.0
author = Marko Mizdrak
author_email = marko.mizdrak@dlr.de
description = ROS 2 runtime for ASAM OpenODD evaluation
license = Apache-2.0

[options]
packages = find:
install_requires =
    PyYAML
    asam_open_odd_core
    asam_open_odd_msgs
python_requires = >=3.10
include_package_data = True


[options.packages.find]
include =
    asam_open_odd_ros
    asam_open_odd_ros.*

[options.entry_points]
console_scripts =
    odd_monitor = asam_open_odd_ros.odd_monitor_node:main

[options.data_files]
share/ament_index/resource_index/packages = resource/asam_open_odd_ros
share/asam_open_odd_ros = package.xml
share/asam_open_odd_ros/launch = launch/launch.py
share/asam_open_odd_ros/config = config/mappings.example.yaml

[install]
install_scripts=$base/lib/asam_open_odd_ros
[develop]
script_dir=$base/lib/asam_open_odd_ros